--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 <body>
     <div class="nav">
         <div id='logo'>
-            <img src="public/images/Harmonize.png" alt="Harmonize Logo" height="75px" width="150px">
+            <a href="index.html"><img src="public/images/Harmonize.png" alt="Harmonize Logo" height="75px" width="150px"></a>
         </div>
         <div id='newfile'>
-            <img src="public/images/newfile.png" alt="New File" height="50px" width="50px">
+            <a href="newfile.html"><img src="public/images/newfile.png" alt="New File" height="50px" width="50px"></a>
         </div>
         <div id='folder'>
-            <img src="public/images/folder.png" alt="Folder" height="50px" width="50px">
+            <a href="folder.html"><img src="public/images/folder.png" alt="Folder" height="50px" width="50px"></a>
         </div>
-        <div id='profile'>
-        </div>
+        <a href="profile.html">
+            <div id='profile'></div>
+        </a>
     </div>
     <div class='main'>
         <div id='slide'>
