--- a/public/newfile/newfile.html
+++ b/public/newfile/newfile.html
@@ -1,3 +1,23 @@
+<div class="nav">
+    <div id='logo'>
+        <a href="home/home.html"><img src="images/Harmonize.png" alt="Harmonize Logo" height="75px" width="150px"></a>
+    </div>
+    <div id='newfile'>
+        <form class='ng-pristine ng-valid' ng-submit="newfile()">
+            <input type="image" src="images/newfile.png" alt='New File' height="50px" width="50px">
+        </form>
+    </div>
+    <div id='folder'>
+        <form class='ng-pristine ng-valid' ng-submit="folder()">
+            <input type="image" src="images/folder.png" alt='Folder' height="50px" width="50px">
+        </form>
+    </div>
+    <div id='profile'>
+        <form class='ng-pristine ng-valid' ng-submit="profile()">
+            <input type="submit" id='profile' value=''>
+        </form>
+    </div>
+</div>
 <div class='main'>
     <form id='newfileform' action="">
         <div id='form'>
