--- a/public/index.html
+++ b/public/index.html
@@ -6,36 +6,12 @@
     <meta charset="utf-8">
     <title>Socket.io Chat</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body ng-app="app">
-    <div class="nav">
-        <div id='logo'>
-            <a href="home/home.html"><img src="images/Harmonize.png" alt="Harmonize Logo" height="75px" width="150px"></a>
-        </div>
-        <div id='newfile'>
-            <form class='ng-pristine ng-valid' ng-submit="newfile()">
-                <!-- <input type="image" src="images/newfile.png" alt='New File' height="50px" width="50px"> -->
-                <input type="submit" value="NewFile">
-            </form>
-        </div>
-        <div id='folder'>
-            <form class='ng-pristine ng-valid' ng-submit="folder()">
-                <input type="image" src="images/folder.png" alt='Folder' height="50px" width="50px">
-            </form>
-        </div>
-        <div id='profile'>
-            <form class='ng-pristine ng-valid' ng-submit="profile()">
-                <input type="submit" id='profile' value=''>
-            </form>
-        </div>
-
-    </div>
-    <div class="container">
-        <div ng-view></div>
+    <div ng-view></div>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
@@ -56,6 +32,7 @@
     <script src="newfile/newfile.Ctrl.js"></script>
     <script src="profile/profile.Ctrl.js"></script>
     <script src="components/socket.Srvc.js"></script>
+    <script src="ace.js"></script>
 </body>
 
-</html>
+</html
