--- a/public/join/join.html
+++ b/public/join/join.html
@@ -1,11 +1,28 @@
+<div class="nav">
+    <div id='logo'>
+        <a href="home/home.html"><img src="images/Harmonize.png" alt="Harmonize Logo" height="75px" width="150px"></a>
+    </div>
+    <div id='newfile'>
+        <form class='ng-pristine ng-valid' ng-submit="newfile()">
+            <input type="image" src="images/newfile.png" alt='New File' height="50px" width="50px">
+        </form>
+    </div>
+    <div id='folder'>
+        <form class='ng-pristine ng-valid' ng-submit="folder()">
+            <input type="image" src="images/folder.png" alt='Folder' height="50px" width="50px">
+        </form>
+    </div>
+    <div id='profile'>
+        <form class='ng-pristine ng-valid' ng-submit="profile()">
+            <input type="submit" id='profile' value=''>
+        </form>
+    </div>
+</div>
 <div class='main'>
-    <form id='newfileform' class='ng-pristine ng-valid' ng-submit="join()">
-        <div id='form'>
-            <div>User Name:</div>
-            <input class="input-lg form-control ng-pristine ng-valid" maxlength="20" ng-model="name" type="text"></input>
-            <!-- <div>Password:</div> -->
-            <!-- <input class="input-lg form-control ng-pristine ng-valid" maxlength="20" ng-model="password" type="text"></input> -->
+    <form id='newfile' class='ng-pristine ng-valid' ng-submit="join()">
+        <div>User Name:
+            <input class="input-lg form-control ng-pristine ng-valid " maxlength="20 " ng-model="name " type="text "></input>
         </div>
-        <input type="submit" value="Log In">
+        <input type="submit" value='Log In'>
     </form>
 </div>
