--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -1,16 +1,22 @@
 <div class="nav">
     <div id='logo'>
-        <a href="index.html"><img src="public/images/Harmonize.png" alt="Harmonize Logo" height="75px" width="150px"></a>
+        <a href="home/home.html"><img src="images/Harmonize.png" alt="Harmonize Logo" height="75px" width="150px"></a>
     </div>
     <div id='newfile'>
-        <a href="newfile.html"><img src="public/images/newfile.png" alt="New File" height="50px" width="50px"></a>
+        <form class='ng-pristine ng-valid' ng-submit="newfile()">
+            <input type="image" src="images/newfile.png" alt='New File' height="50px" width="50px">
+        </form>
     </div>
     <div id='folder'>
-        <a href="folder.html"><img src="public/images/folder.png" alt="Folder" height="50px" width="50px"></a>
+        <form class='ng-pristine ng-valid' ng-submit="folder()">
+            <input type="image" src="images/folder.png" alt='Folder' height="50px" width="50px">
+        </form>
     </div>
-    <a href="profile.html">
-        <div id='profile'></div>
-    </a>
+    <div id='profile'>
+        <form class='ng-pristine ng-valid' ng-submit="profile()">
+            <input type="submit" id='profile' value=''>
+        </form>
+    </div>
 </div>
 <div class='main'>
     <div id='profileContainer'>
